--- a/faq.html
+++ b/faq.html
@@ -25,19 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="features.html">Features</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item active dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                             <div class="dropdown-menu" aria-labelledby="pagesMenu">
                                 <a class="dropdown-item" href="blog.html">Blog</a>
                                 <a class="dropdown-item" href="login.html">Login</a>
                                 <a class="dropdown-item" href="register.html">Register</a>
-                                <a class="dropdown-item" href="faq.html">FAQ</a>
+                                <a class="dropdown-item" href="faq.html">FAQ <span class="sr-only">(current)</span></a>
                                 <a class="dropdown-item" href="404.html">404</a>
                                 <a class="dropdown-item" href="careers.html">Careers</a>
                                 <a class="dropdown-item" href="blog-single.html">Single blog</a>
@@ -61,112 +61,96 @@
         </div>
     </header>
 
-    <main class="page-about">
+    <main>
         <div class="container">
-            <section class="page-header">
-                <h1>About</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb foi-breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">About</li>
-                    </ol>
-                </nav>
-            </section>
-            <section class="foi-page-section pt-0">
-                <div class="row">
-                    <div class="col-md-6 mb-4 mb-md-0 pr-lg-0">
-                        <h2 class="about-section-one-title">
-                            With more apps than iOS, Android puts <span class="font-weight-normal">a world of options at your fingertips.</span>
-                        </h2>
-                        <div class="about-section-one-content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                            
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <section class="page-header">
+                        <h2>Frequently asked questions</h2>
+                        <h5>Whether you have questions or you would just like to say hello, contact us.</h5>
+                    </section>
+                    <section class="py-5 mb-5">
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqOneTitle">
+                                <a href="#faqOneCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">Theme integration</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqOneCollapse" class="collapse" aria-labelledby="faqOneTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 pl-lg-0 d-flex align-items-center align-items-lg-end">
-                        <img src="assets/images/about_img_1.png" alt="about" class="img-fluid" width="448px">
-                    </div>
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqTwoTitle">
+                                <a href="#faqTwoCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">How do I get a receipt for my purchase?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqTwoCollapse" class="collapse" aria-labelledby="faqTwoTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqThreeTitle">
+                                <a href="#faqThreeCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">Need personal assistance?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqThreeCollapse" class="collapse" aria-labelledby="faqThreeTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqFourTitle">
+                                <a href="#faqFourCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">How can I get a refund?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqFourCollapse" class="collapse" aria-labelledby="faqFourTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqFiveTitle">
+                                <a href="#faqFiveCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">Which license do I need?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqFiveCollapse" class="collapse" aria-labelledby="faqFiveTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card faq-card">
+                            <div class="card-header bg-white" id="faqSixTitle">
+                                <a href="#faqSixCollapse" class="d-flex align-items-center" data-toggle="collapse">
+                                    <h6 class="mb-0">How do I see previous orders?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                </a>
+                            </div>
+                            <div id="faqSixCollapse" class="collapse" aria-labelledby="faqSixTitle">
+                                <div class="card-body">
+                                    <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-            </section>
-            <section class="foi-page-section">
-                <div class="row">
-                    <div class="col-md-6 mb-5 mb-md-0">
-                        <img src="assets/images/about_img_2.png" alt="about 2" class="w-100 img-fluid pr-md-5" width="437px">
-                    </div>
-                    <div class="col-md-6">
-                        <h2 class="about-section-two-title">We create the best <span class="font-weight-normal">solution for you and your business.</span></h2>
-                        <div class="about-section-two-content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
-                            <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="foi-page-section mb-5">
-                <h5 class="text-center font-os mb-0">The amazing team</h5>
-                <h2 class="team-section-title">Our Creative Minds</h2>
-                <div class="row">
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_1.png" alt="Cardarion Hart" class="team-member-avatar">
-                            <h6 class="mb-0">Cardarion Hart</h6>
-                            <p class="team-member-designation">CEO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_2.png" alt="Gauthier Drewitt" class="team-member-avatar">
-                            <h6 class="mb-0">Gauthier Drewitt</h6>
-                            <p class="team-member-designation">HR Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_3.png" alt="Labeeba Al Amer" class="team-member-avatar">
-                            <h6 class="mb-0">Labeeba Al Amer</h6>
-                            <p class="team-member-designation">Finance Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_4.png" alt="Onyama Limba" class="team-member-avatar">
-                            <h6 class="mb-0">Onyama Limba</h6>
-                            <p class="team-member-designation">Software Engineer</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_5.png" alt="Athar Malakooti" class="team-member-avatar">
-                            <h6 class="mb-0">Athar Malakooti</h6>
-                            <p class="team-member-designation">CEO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_6.png" alt="Kung Jiyeon" class="team-member-avatar">
-                            <h6 class="mb-0">Kung Jiyeon</h6>
-                            <p class="team-member-designation">HR Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_7.png" alt="Mathijn Agter" class="team-member-avatar">
-                            <h6 class="mb-0">Mathijn Agter</h6>
-                            <p class="team-member-designation">Finance Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_8.png" alt="Jontray Arnold" class="team-member-avatar">
-                            <h6 class="mb-0">Jontray Arnold</h6>
-                            <p class="team-member-designation">Software Engineer</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
         </div>
     </main>
 
