--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,13 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="features.html">Features</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item active dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                             <div class="dropdown-menu" aria-labelledby="pagesMenu">
                                 <a class="dropdown-item" href="blog.html">Blog</a>
@@ -41,7 +41,7 @@
                                 <a class="dropdown-item" href="404.html">404</a>
                                 <a class="dropdown-item" href="careers.html">Careers</a>
                                 <a class="dropdown-item" href="blog-single.html">Single blog</a>
-                                <a class="dropdown-item" href="privacy-policy.html">Privacy policy</a>
+                                <a class="dropdown-item" href="privacy-policy.html">Privacy policy <span class="sr-only">(current)</span></a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -61,112 +61,63 @@
         </div>
     </header>
 
-    <main class="page-about">
+    <main>
         <div class="container">
-            <section class="page-header">
-                <h1>About</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb foi-breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">About</li>
-                    </ol>
-                </nav>
-            </section>
-            <section class="foi-page-section pt-0">
-                <div class="row">
-                    <div class="col-md-6 mb-4 mb-md-0 pr-lg-0">
-                        <h2 class="about-section-one-title">
-                            With more apps than iOS, Android puts <span class="font-weight-normal">a world of options at your fingertips.</span>
-                        </h2>
-                        <div class="about-section-one-content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                            
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <section class="page-header">
+                        <h2>Privacy Policy</h2>
+                        <h5>Whether you have questions or you would just like to say hello, contact us.</h5>
+                    </section>
+                    <section class="privacy-policy-section">
+                        <div class="row">
+                            <div class="col-md-3 position-relative">
+                                <nav class="nav privay-policy-nav">
+                                    <a href="#user-licence" class="nav-link">User License</a>
+                                    <a href="#disclaimer" class="nav-link">Disclaimer</a>
+                                    <a href="#limitations" class="nav-link">Limitations</a>
+                                    <a href="#governing-law" class="nav-link">Governing Law</a>
+                                </nav>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="privay-policy-card card">
+                                    <div class="card-body">
+                                        <div id="user-licence">
+                                            <h5 class="policy-title">User License</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                        </div>
+                                        <div id="disclaimer">
+                                            <h5 class="policy-title">Disclaimer</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                        </div>
+                                        <div id="limitations">
+                                            <h5 class="policy-title">Limitations</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                        </div>
+                                        <div id="governing-law">
+                                            <h5 class="policy-title">Governing Law</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 pl-lg-0 d-flex align-items-center align-items-lg-end">
-                        <img src="assets/images/about_img_1.png" alt="about" class="img-fluid" width="448px">
-                    </div>
+                    </section>
                 </div>
-            </section>
-            <section class="foi-page-section">
-                <div class="row">
-                    <div class="col-md-6 mb-5 mb-md-0">
-                        <img src="assets/images/about_img_2.png" alt="about 2" class="w-100 img-fluid pr-md-5" width="437px">
-                    </div>
-                    <div class="col-md-6">
-                        <h2 class="about-section-two-title">We create the best <span class="font-weight-normal">solution for you and your business.</span></h2>
-                        <div class="about-section-two-content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
-                            <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="foi-page-section mb-5">
-                <h5 class="text-center font-os mb-0">The amazing team</h5>
-                <h2 class="team-section-title">Our Creative Minds</h2>
-                <div class="row">
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_1.png" alt="Cardarion Hart" class="team-member-avatar">
-                            <h6 class="mb-0">Cardarion Hart</h6>
-                            <p class="team-member-designation">CEO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_2.png" alt="Gauthier Drewitt" class="team-member-avatar">
-                            <h6 class="mb-0">Gauthier Drewitt</h6>
-                            <p class="team-member-designation">HR Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_3.png" alt="Labeeba Al Amer" class="team-member-avatar">
-                            <h6 class="mb-0">Labeeba Al Amer</h6>
-                            <p class="team-member-designation">Finance Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_4.png" alt="Onyama Limba" class="team-member-avatar">
-                            <h6 class="mb-0">Onyama Limba</h6>
-                            <p class="team-member-designation">Software Engineer</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_5.png" alt="Athar Malakooti" class="team-member-avatar">
-                            <h6 class="mb-0">Athar Malakooti</h6>
-                            <p class="team-member-designation">CEO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_6.png" alt="Kung Jiyeon" class="team-member-avatar">
-                            <h6 class="mb-0">Kung Jiyeon</h6>
-                            <p class="team-member-designation">HR Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_7.png" alt="Mathijn Agter" class="team-member-avatar">
-                            <h6 class="mb-0">Mathijn Agter</h6>
-                            <p class="team-member-designation">Finance Manager</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-5">
-                        <div class="team-member-card">
-                            <img src="assets/images/user/user_8.png" alt="Jontray Arnold" class="team-member-avatar">
-                            <h6 class="mb-0">Jontray Arnold</h6>
-                            <p class="team-member-designation">Software Engineer</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
         </div>
     </main>
 
